--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,13 @@
         <item name="android:paddingTop">8dp</item>
     </style>
 
+    <style name="MainTextStatus" >
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:textColor">@android:color/black</item>
+
+
+    </style>
 </resources>
