--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:id="@+id/activity_main"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:paddingBottom="@dimen/activity_vertical_margin"
-             android:paddingLeft="@dimen/activity_horizontal_margin"
-             android:paddingRight="@dimen/activity_horizontal_margin"
-             android:paddingTop="@dimen/activity_vertical_margin"
-             tools:context="geozombie.bboybboy.com.geozombie.MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="geozombie.bboybboy.com.geozombie.MainActivity">
 
     <ImageView
         android:id="@+id/settings"
@@ -16,14 +16,14 @@
         android:layout_height="wrap_content"
         android:layout_gravity="right|top"
         android:src="@drawable/ic_build_black_24dp"
-        android:tint="@color/colorPrimary"/>
+        android:tint="@color/colorPrimary" />
 
     <FrameLayout
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_gravity="center"
         android:layout_marginBottom="64dp"
-        android:background="@drawable/circle_background"></FrameLayout>
+        android:background="@drawable/circle_background" />
 
     <TextView
         android:id="@+id/status_text"
@@ -33,7 +33,7 @@
         android:layout_marginBottom="64dp"
         android:text="@string/out"
         android:textColor="@android:color/holo_red_light"
-        android:textSize="64dp"/>
+        android:textSize="64dp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -43,13 +43,12 @@
 
         <TextView
             style="@style/MainTextStatus"
-            android:text="@string/wifi_point"/>
+            android:text="@string/wifi_point" />
 
         <TextView
             android:id="@+id/wifi_status"
             style="@style/MainTextStatus"
-            android:textColor="@android:color/darker_gray"
-            />
+            android:textColor="@android:color/darker_gray" />
     </LinearLayout>
 
     <LinearLayout
@@ -60,12 +59,11 @@
 
         <TextView
             style="@style/MainTextStatus"
-            android:text="@string/distance"/>
+            android:text="@string/distance" />
 
         <TextView
             android:id="@+id/distance_status"
-            style="@style/MainTextStatus"
-            />
+            style="@style/MainTextStatus" />
     </LinearLayout>
 
 </FrameLayout>
