--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,19 +4,27 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#111110"
     tools:context="geozombie.bboybboy.com.geozombie.MainActivity">
 
     <ImageView
         android:id="@+id/settings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="@dimen/activity_horizontal_margin"
         android:layout_gravity="right|top"
         android:src="@drawable/ic_build_black_24dp"
-        android:tint="@color/colorPrimary" />
+        android:tint="@android:color/white" />
+
+    <Button
+        android:id="@+id/zombies"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/activity_horizontal_margin"
+        android:layout_gravity="left|top"
+        android:text="@string/call_zombies"
+        android:textColor="@android:color/white"
+        android:background="@android:color/transparent"/>
 
     <FrameLayout
         android:layout_width="150dp"
